@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-15T16:15:30Z",
+  "timestamp" : "2022-06-16T01:00:39Z",
   "count_outdated" : 337,
   "uniques_outdated" : 181,
-  "count" : 366,
+  "count" : 367,
   "uniques" : 198,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-06-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
