@@ -1,3 +1,10 @@
+2022-06-16T01:00:39Z:
+* notice: last 14d: unq all: 4 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 181 337 / 198 366
+* notice: next accum: outdated-unq outdated-all / unq all: 181 337 / 198 367
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-15]
+
 2022-06-15T16:15:30Z:
 * notice: last 14d: unq all: 4 29
 * notice: prev accum: outdated-unq outdated-all / unq all: 180 336 / 198 366
